[gd_scene load_steps=16 format=3 uid="uid://clj453y1ct468"]

[ext_resource type="Script" path="res://scripts/gremlin_shop.gd" id="1_3bcr4"]
[ext_resource type="Texture2D" uid="uid://cotkyff0ssvqr" path="res://assets/sprites/level_objects/gremlin_shop_sheet.png" id="1_u7smj"]
[ext_resource type="Shader" path="res://shaders/highlight.gdshader" id="1_wls4n"]
[ext_resource type="FontFile" uid="uid://bwho0ihf6hpw6" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_b2nui"]
[ext_resource type="Texture2D" uid="uid://brcfqdgnchh52" path="res://assets/sprites/UI/shop/shop_background_ui.png" id="4_gampp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qr2j"]
shader = ExtResource("1_wls4n")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_xp6vq"]
atlas = ExtResource("1_u7smj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u5pd"]
atlas = ExtResource("1_u7smj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yskd"]
atlas = ExtResource("1_u7smj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gktq"]
atlas = ExtResource("1_u7smj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_okklg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp6vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u5pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yskd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gktq")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_mglit"]
resource_name = "open_menu"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopControl:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 0), Vector2(80, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShopControl:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-40, -48), Vector2(-40, -80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShopControl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hkmag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopControl:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShopControl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-40, -80)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShopControl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3mmh"]
_data = {
"RESET": SubResource("Animation_hkmag"),
"open_menu": SubResource("Animation_mglit")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxjwb"]
size = Vector2(40, 16)

[node name="gremlin_shop" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_3bcr4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7qr2j")
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_okklg")
autoplay = "default"
frame_progress = 0.263539

[node name="ShopControl" type="Control" parent="."]
clip_contents = true
layout_mode = 3
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = -48.0

[node name="ShopMenuSprite" type="Sprite2D" parent="ShopControl"]
clip_children = 2
light_mask = 0
z_index = 100
position = Vector2(40, 16)
texture = ExtResource("4_gampp")

[node name="PriceLabel1" type="Label" parent="ShopControl/ShopMenuSprite"]
offset_left = -30.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_b2nui")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1

[node name="PriceLabel2" type="Label" parent="ShopControl/ShopMenuSprite"]
offset_left = -10.0
offset_top = 6.0
offset_right = 11.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_b2nui")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1

[node name="PriceLabel3" type="Label" parent="ShopControl/ShopMenuSprite"]
offset_left = 10.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_b2nui")
theme_override_font_sizes/font_size = 8
text = "0
"
horizontal_alignment = 1

[node name="ItemTexture1" type="TextureRect" parent="ShopControl/ShopMenuSprite"]
light_mask = 0
offset_left = -28.0
offset_top = -12.0
offset_right = -12.0
offset_bottom = 4.0

[node name="ItemTexture2" type="TextureRect" parent="ShopControl/ShopMenuSprite"]
light_mask = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = 4.0

[node name="ItemTexture3" type="TextureRect" parent="ShopControl/ShopMenuSprite"]
light_mask = 0
offset_left = 12.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r3mmh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_oxjwb")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
